components/rsptx/templates/staticAssets/main.css
/* custom css */

html {
  position: relative;
  min-height: 100%;
}
body {
  padding-top: 2rem;
  margin-bottom: 60px;
  font-size: 12pt;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 50px;
  line-height: 50px;
}

.taskbox {
  margin-top: 10px;
  margin-bottom: 10px;
}

.navbar {
  margin-left: 20px;
  margin-right: 20px;
}

.container {
  width: 45em;
  margin-left: auto;
  margin-right: auto;
}

.has-error {
  color: red;
}

.autopermalink {
    display: none;
}

/* Navbar icon helpers (used by _navbar.html) */
.ti-big {
  font-size: 1.5em;
}
.caption-wrap {
  display: inline-flex;   /* or flex, if you want it to be block-level */
  align-items: center;    /* vertical centering */
  gap: 0.4em;             /* spacing between icon and text */
}

